refactor: extract sending the response body